objects/Zip_Postal_Code__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_D_T__c</fullName>
        <label>Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <referenceTo>State_Province__c</referenceTo>
        <relationshipLabel>Zip/Postal Codes</relationshipLabel>
        <relationshipName>Zip_Postal_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>AST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Length__c</fullName>
        <formula>LEN(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Zip/Postal Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State_Province__c</columns>
        <columns>Time_Zone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>X1A_PST</fullName>
        <columns>NAME</columns>
        <columns>State_Province__c</columns>
        <columns>Time_Zone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Time_Zone__c</field>
            <operation>equals</operation>
            <value>PST</value>
        </filters>
        <label>1A - PST</label>
    </listViews>
    <nameField>
        <label>Zip/Postal Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip/Postal Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>